[workspace]
resolver = "2"
members=["mapsdk", "examples/*"]

[workspace.dependencies]
async-trait = "0.1.81"
bytemuck = { version = "1.16.1", features = [ "derive" ] }
env_logger = "0.11.3"
dashmap = "6.0.1"
glam = "0.28.0"
image = { version = "0.25.1", default-features = false, features = ["jpeg", "png", "tiff", "webp"] }
log = "0.4.22"
nanoid = "0.4.0"
pollster = "0.3.0"
rayon = "1.10.0"
reqwest = "0.12.5"
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
wgpu = "22.0.0"
winit = "0.30.3"
