[workspace]
resolver = "2"
members=["mapsdk", "examples/*"]

[workspace.dependencies]
async-trait = "0.1.81"
bytemuck = { version = "1.16.1", features = [ "derive" ] }
env_logger = "0.11.3"
dashmap = "6.0.1"
geo = "0.28.0"
geojson = "0.24.1"
glam = "0.28.0"
image = { version = "0.25.1", default-features = false, features = ["jpeg", "png", "tiff", "webp"] }
lazy_static = "1.5.0"
log = "0.4.22"
lyon = "1.0.1"
moka = { version = "0.12.8", features = ["sync"] }
nanoid = "0.4.0"
pollster = "0.3.0"
priority-queue = "2.0.3"
rayon = "1.10.0"
reqwest = "0.12.5"
serde = "1.0.204"
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["macros", "rt", "rt-multi-thread", "sync"] }
wgpu = "22.1.0"
winit = "0.30.3"
